# CompressJpeg

./: README.MD  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/beviswang/compressjpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/beviswang/compressjpeg/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/beviswang/compressjpeg/: ExampleUnitTest.kt
bevjpeg/: CMakeLists.txt  build.gradle
bevjpeg/libBuild/jpeg/lib/armeabi/: cjpeg  djpeg  jpegtran  rdjpgcom  tjbench  tjunittest  wrjpgcom
bevjpeg/libBuild/jpeg/lib/armeabi-v7a/: cjpeg  djpeg  jpegtran  rdjpgcom  tjbench  tjunittest  wrjpgcom
bevjpeg/src/androidTest/java/com/beviswang/bevjpeg/: ExampleInstrumentedTest.java
bevjpeg/src/main/: AndroidManifest.xml
bevjpeg/src/main/cpp/: jpeg-lib.c
bevjpeg/src/main/java/com/beviswang/bevjpeg/: CompressNative.kt
bevjpeg/src/main/res/values/: strings.xml
bevjpeg/src/test/java/com/beviswang/bevjpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
